--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.460.0",
+    "mongodb": "^6.17.0",
+    "mongoose": "^8.16.1",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
