--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.1",
     "next": "14.2.14",
+    "next-cloudinary": "^6.16.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
